[package]
authors = [
  "Xavier Lau <xavier@inv.cafe>",
  "Miraland Labs <miralandlabs@gmail.com>"
]
build       = "build.rs"
description = "Miraland Atomicalsir Tool for Resuming after Commit Succeeded but Reveal Failed (based on atomicalsir)"
edition     = "2021"
homepage    = "https://hack.ink/atomicalsir"
license     = "GPL-3.0"
name        = "miraland-atomicalsir-resume-after-commit"
readme      = "README.md"
repository  = "https://github.com/miraland-labs/miraland-atomicalsir-resume-after-commit"
version     = "0.1.0"

[profile.ci-dev]
incremental = false
inherits    = "dev"

[profile.ci-release]
inherits = "release"
lto      = true

[build-dependencies]
# crates.io
vergen = { version = "8.3", features = ["build", "cargo", "git", "gitcl"] }

[dependencies]
# crates.io
anyhow             = { version = "1.0" }
array-bytes        = { version = "6.2" }
bitcoin            = { version = "0.31", features = ["rand-std"] }
ciborium           = { version = "0.2" }
clap               = { version = "4.4", features = ["color", "derive"] }
color-eyre         = { version = "0.6" }
num_cpus           = { version = "1.16" }
reqwest            = { version = "0.11", features = ["json", "rustls-tls"] }
serde              = { version = "1.0", features = ["derive"] }
serde_json         = { version = "1.0" }
sha2               = { version = "0.10" }
tokio              = { version = "1.35", features = ["macros", "rt-multi-thread"] }
tracing            = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
